--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/AuctionDetail.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/AuctionDetail.cshtml
@@ -451,7 +451,7 @@
                                             <td data-history="bidder">
                                                 <div class="user-info">
                                                     <div class="thumb">
-                                                        <img src="~/assetsIndex/images/history/01.png" alt="history">
+                                                        <img src="~/assets/img/userImage/@item.Customer.Image" alt="history">
                                                     </div>
                                                     <div class="content">
                                                         @item.Customer.Name
