--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/WinningBid.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/WinningBid.cshtml
@@ -89,7 +89,7 @@
                         <div class="col-sm-10 col-md-6">
                             <div class="auction-item-2">
                                 <div class="auction-thumb">
-                                    <a href="product-details.html"><img src="~/assets/img/artwork/@item.Artwork.Image" height="300" alt="car"></a>
+                                    <a href="/Index/auctiondetail?auctionId=@item.Id"><img src="~/assets/img/artwork/@item.Artwork.Image" height="300" alt="car"></a>
                                     <a href="#0" class="rating"><i class="far fa-star"></i></a>
                                     <a href="#0" class="bid"><i class="flaticon-auction"></i></a>
                                 </div>
