--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
@@ -100,7 +100,7 @@
                                     var root= '@Url.Content("~")';
                                     a +=`<div class="columnArt" >
                                             <div class="content">
-                                                <a data-lightbox="mygallery"><img src="`+root+`/assets/img/artwork/`+smg[i].image+`" alt=""></a>
+                                               <a data-lightbox="mygallery" href="`+ root + `/assets/img/artwork/` + smg[i].image + `"><img src="` + root + `/assets/img/artwork/` + smg[i].image +`" alt=""></a>
                                                 <h4>`+smg[i].name+`</h4>
                                                 <b>`+smg[i].artist.name+`</b>
                                                 <h5>$`+smg[i].defautPrice+`</h5>
@@ -116,6 +116,13 @@
                             $("#ourgallery").html(
                                 a
                             )
+                            var numberArtInPage = 8;
+                            var totalPages = totalPage(numberArtInPage, document.getElementById("ourgallery").getElementsByClassName("columnArt"));
+                            var ulTag = document.querySelector("#pagegallery");
+                            var arts = document.getElementById("ourgallery").getElementsByClassName("columnArt");
+                            pageOne(numberArtInPage, arts);
+                            element(totalPages, 1, ulTag, numberArtInPage);
+
                         }
                     })
                 }
@@ -132,7 +139,7 @@
                                         var root= '@Url.Content("~")';
                                         a += `<div class="columnArt">
                                             <div class="content">
-                                                <a data-lightbox="mygallery"><img src="`+ root + `/assets/img/artwork/` + smg[i].image +`" alt=""></a>
+                                               <a data-lightbox="mygallery" href="`+ root + `/assets/img/artwork/` + smg[i].image + `"><img src="` + root + `/assets/img/artwork/` + smg[i].image +`" alt=""></a>
                                                 <h4>`+ smg[i].name + `</h4>
                                                 <b>`+ smg[i].artist.name + `</b>
                                                 <h5>$`+ smg[i].defautPrice + `</h5>
@@ -148,6 +155,12 @@
                                 $("#ourgallery").html(
                                     a
                                 )
+                                var numberArtInPage = 8;
+                                var totalPages = totalPage(numberArtInPage, document.getElementById("ourgallery").getElementsByClassName("columnArt"));
+                                var ulTag = document.querySelector("#pagegallery");
+                                var arts = document.getElementById("ourgallery").getElementsByClassName("columnArt");
+                                pageOne(numberArtInPage, arts);
+                                element(totalPages, 1, ulTag, numberArtInPage);
                             }
                         })
                 }
